# ROS-Multi-Camera-Object-Detectino

./: CMakeLists.txt  README.md  package.xml
launch/: AI.launch  AI1.launch  sample.launch  sample1.launch
rviz/: final.rviz
src/: front.cpp  frontleft.cpp  object_detection.cpp  onescript.cpp
